googleVis 0.2.16 [2012-03-19]
----------------------------

Changes

 * Updated example in help file of gvisGeoChart for individual colour
   axis and added to vignette as well

googleVis 0.2.15 [2012-03-04]
----------------------------

Changes

*  Updated documentation following a new version of the Google API
   on 22 February 2012. 
     
*  Moved vignette from folder /inst/doc to /vignettes

NEW FEATURES

*  Quoted from Google
   http://code.google.com/apis/chart/interactive/docs/release_notes.html: 
   - Added gradient color mode to bubble chart.
   - Geo chart:
     o  Region interactivity in marker mode is now disabled by
     	default. How to keep the old behavior? Set the
   	enableRegionInteractivity option to true.

     o  Markers are now opaque by default. How to keep the old
        behaviour? Set the markerOpacity option to 0.5.

     o  Marker size is now between 3 and 12 pixels by default. How to
        keep the old behavior? Set the sizeAxis option to {minSize: 2,
        maxSize: 30}.

     o  A magnifying glass is now opened when the user hovers over
        cluttered markers (excluding IE<=8). How to keep the old
        behaviour? Set the magnifyingGlass option to {enable: false}.

     o  Maps are not stretched by default anymore, but rather kept at
      	the original aspect ratio. How to keep the old behavior? Set the
  	keepAspectRatio option to false.


googleVis 0.2.14 [2012-02-04]
----------------------------

Changes

*  Updated help files to be in line with the Google Visualisation
   API pages
*  Updated vignette with new section on dealing with apostrophes in
   column names and updated example in section "Setting options"
*  Fixed typos in vignette. Thanks to Pat Burns for pointing them
   out
*  Updated links to Google's updated API Terms of Use:
   http://code.google.com/apis/terms/index.html  

NEW FEATURES

 *  New bubble chart function gvisBubbleChart


googleVis 0.2.13 [2011-12-19]
----------------------------

Changes
